--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<htlm>
   <head>
     <title>
       This is a test of Github, Jenkins, and AWS
     </title>
   <body>
-    This is a test. Version 0.6
+    This is a test. Version 0.7.
   </body>
 </html>
