--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       This is a test of Github, Jenkins, and AWS
     </title>
-  <body>
+  <body0>
     This is a test. Version 0.7.
   </body>
 </html>
