--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html9>
 <html>
-  <head>
+  <ead>
     <title>
       This is a test of Github, Jenkins, and AWS
     </title>
   <body>
     This is a test. Version 0.7.
   </body>
-<html>
+</html>
